[project]
name = "snmpv3-utils"
version = "0.3.0"
description = "SNMPv3 CLI testing utility — GET, WALK, SET, traps, credential testing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["snmp", "snmpv3", "network", "cli", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pysnmp>=7.0",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
    "tomli-w>=1.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
snmpv3 = "snmpv3_utils.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.9",
    "ruff>=0.4",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snmpv3_utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
